--- a/Slides.html
+++ b/Slides.html
@@ -17,7 +17,7 @@ class: center, middle, inverse, title-slide
 ## ⚔<br/>with xaringan
 ### Vebashini Naidoo (<span class="citation">@Vebash</span>)
 ### RLadies Johannesburg
-### 2019/09/22 (updated: 2019-09-28)
+### 2019/09/22 (updated: 2019-09-29)
 
 ---
 
@@ -109,7 +109,7 @@ Then we load the package to make the functionality available using:
 ]        
 ---
 # Name that thing
-.pull-left[&lt;img src = "./naming_things_is_hard.png" width = 300px&gt;]
+.pull-left[&lt;img src = "./naming_things_is_hard.png" width = 320px&gt;]
 
 .pull-right[
 ### Formal Naming Requirements
@@ -123,23 +123,39 @@ You can’t use either hyphens or underscores in the package name.
 __Other Tips:__
 - It is recommended to avoid using periods, in the package name as it is easily confused with function names in the OO system of R.
 - Find a name that is easy to Google.
-- 
+- Avoid using capitalisation. For e.g. I wanted to name the original pkg `disneycolouR` but Hadley advises otherwise 😄.
+- Try and find a name that evokes what the pkg does.
+- Add an __`r`__ to the name, if it makes sense e.g. tidyr, dplyr etc.
 
 ---
+# Create a package
 
-- Create a new R Project from the menu 
+- Check if the name you're thinking about 🤔 is available? Checks CRAN etc.
 
-`File -&gt; New Project -&gt; New Directory -&gt; R Package`
+.pull-left[
 
+```r
+install.packages("available")
+available::available("testthat")
+```
+]
+.pull-right[
+&lt;img src = "./available.png" width = 320px&gt;
+]
+
+- Create a new R Project from the menu:
+
+  `File -&gt; New Project -&gt; New Directory -&gt; R Package` [Initialise with a git repo]
+  
+  &lt;img src = "./create_pkg.png" width = 300px&gt;
 ---
 # Structure of a package
 - DESCRIPTION : the metadata of the package (package name, version, author, maintainer, dependencies etc.)
-- NAMESPACE : how your package interacts with R and with other packages
-- R/ : the code
-- man/ : the documentation
+- NAMESPACE : how your package interacts with other packages and what you make available to the user
+- R/ : code files
+- man/ : documentation files
 - data/ : data
-- tests : the tests
-- vignettes : the vignettes
+- tests/ : the tests
 - .Rbuildignore : a description of what will be ignored when the package is built
 
 ---
@@ -149,7 +165,8 @@ __Other Tips:__
 1. [Complete original version: R packages book](http://r-pkgs.had.co.nz/)
 1. [Pre-flight check list](https://github.com/rdpeng/daprocedures/blob/master/lists/Rpackage_preflight.md)
 1. [Writing an R package from scratch](https://hilaryparker.com/2014/04/29/writing-an-r-package-from-scratch/)
-
+1. [R package development videos](https://www.youtube.com/playlist?list=PLk3B5c8iCV-T4LM0mwEyWIunIunLyEjqM)
+1. [R package primer](http://kbroman.org/pkg_primer/)
 
 ---
 
